--- a/small-screen.css
+++ b/small-screen.css
@@ -97,6 +97,10 @@
     opacity: 1;
   }
 
+  .contact h2 {
+    padding-top: 25px;
+  }
+
   .contact h3 {
     margin-bottom: 30px;
   }
